# obsidian.cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1  compile_commands.json  crypto-utils-library.pro
cmake/: CMakeLists.txt
source/: crypto-utils.cxx  crypto-utils.hxx  main.cpp  maintest_ossl_cw.cpp  obsidian.cpp  obsidian.hpp  ossl_cw.cpp  ossl_cw.hpp
source/include/: obsidian.hpp
source/include/obsidian/: asymmetric.hpp  encoding.hpp  hashing.hpp  kderivation.hpp  random.hpp  symmetric.hpp
source/obsidian/: asymmetric.cpp  encoding.cpp  hashing.cpp  kderivation.cpp  random.cpp  symmetric.cpp
source/obsidian-test/tests/: test_encodings.cpp
test-crypto-utils-library/: main.cxx  test-crypto-utils-library.pro
